# egon-worker

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: PackageTest.yml
docs/: _index.md  cli.md  index.md  settings.md  status.md  worker.md
egon_worker/: __init__.py  cli.py  settings.py  status.py  worker.py
tests/cli/: test_BaseParser.py
